<resources>
    <string name="app_name">Smartmath</string>

    <!-- Common -->
    <string name="select_an_method">Please, choose a method</string>
    <string name="dichotomy_name">Dichotomy</string>
    <string name="dichotomy_name_underlined"><u>Dichotomy</u></string>
    <string name="dichotomy_detailed">Dichotomy\ndetailed solution</string>
    <string name="golden_section_name">Golden Section</string>
    <string name="golden_section_name_underlined"><u>Golden Section</u></string>
    <string name="golden_section_detailed">Golden Section: detailed solution</string>

    <string name="title_expression">Expression:</string>
    <string name="title_borders">Borders:</string>
    <string name="title_accuracy">Accuracy:</string>
    <string name="title_solution">Solution</string>
    <string name="title_solution_underlined"><u>Solution</u></string>
    <string name="title_detailed_solution">Show detailed solution</string>
    <string name="title_step">Step: %1$s</string>
    <string name="title_x_end">x_end = %1$s</string>
    <string name="title_f_x_end">F(x_end) = %1$s</string>

    <string name="title_help_complex_op">Possible complex operations</string>
    <string name="title_element">Element:</string>
    <string name="title_description">Description:</string>

    <string name="hint_expression_1">3x^4 + 20x^3 - 90x -84</string>
    <string name="hint_float_value">0.001</string>

    <string name="char_bracket_start">[</string>
    <string name="char_bracket_end">]</string>
    <string name="char_zero">0</string>
    <string name="char_semicolon">;</string>

    <string name="find_solution">Find a solution</string>

    <!--Content description-->
    <string name="image_of_cube">Image of a Rubik\'s cube. A Rubik\'s cube with parts slightly shifted in different directions</string>
    <string name="image_of_background_main_screen">Background image. It shows a blue background, and a gray stripe running across the top left of the screen. On the left side of the image there is a decorative rope that goes from top to bottom.</string>
    <string name="image_of_background_fr_one_dim">Background. The background shows a yellowish, squared notebook sheet.</string>
    <string name="image_help_math">Help with special math operations. The icon is a white question mark placed on a blue circle.</string>
    <string name="image_help_close">Image of the cross icon. Closes the help screen.</string>
    <string name="image_button_home">Home button. Shows a blue house icon.</string>
    <string name="image_check_done">Green check mark image. Indicator that the solution has been found.</string>
    <string name="image_check_undone">Image of the red cross icon. Indicator that the solution hasn\'t been found yet.</string>

    <!-- Detailed solution min abe -->
    <string name="char_plus_num">%1$s%2$s = %3$s</string> <!--a0 = 2.0-->
    <string name="x_midpoint">xMidpoint = %1$s</string>
    <string name="char_plus_one_plus_num">%1$s%2$s+1 = %3$s</string> <!--a0 = 2.0-->
    <string name="condition_detailed">Condition |b%1$s+1 - a%1$s+1| = %2$s</string>
    <string name="x_end">x_end = %1$s</string>
    <string name="f_x_end">F(x_end) = %1$s</string>

</resources>