<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clFrMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_of_background_main_screen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_one" />

    <Button
        android:id="@+id/bDichotomy"
        style="@style/ButtonSemibold600"
        android:layout_width="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dichotomy_name"
        app:layout_constraintBottom_toTopOf="@+id/bGoldenSection"
        app:layout_constraintEnd_toEndOf="@+id/bGoldenSection"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bGoldenSection" />

    <Button
        android:id="@+id/bGoldenSection"
        style="@style/ButtonSemibold600"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="102dp"
        android:text="@string/golden_section_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvChooseMethod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/poppins_medium_500"
        android:text="@string/select_an_method"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/bDichotomy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivCubeMain"
        android:layout_width="151dp"
        android:layout_height="155dp"
        android:layout_marginBottom="148dp"
        android:contentDescription="@string/image_of_cube"
        app:layout_constraintBottom_toTopOf="@+id/bDichotomy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/img_cube" />

</androidx.constraintlayout.widget.ConstraintLayout>