<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackground0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_of_background_fr_one_dim"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/paper_four" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TitleTopScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dichotomy_name_underlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExpression"
        style="@style/TextRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="-2dp"
        android:text="@string/title_expression"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivHelp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/image_help_math"
        app:layout_constraintBottom_toBottomOf="@+id/tvExpression"
        app:layout_constraintEnd_toEndOf="@id/tvExpression"
        app:layout_constraintTop_toTopOf="@+id/tvExpression"
        app:srcCompat="@drawable/ic_sign_help" />

    <EditText
        android:id="@+id/etExpression"
        style="@style/EditTextRegularOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-12dp"
        android:ems="10"
        android:hint="@string/hint_expression_1"
        android:inputType="text|textMultiLine"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExpression"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvBorders"
        style="@style/TextRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_borders"
        app:layout_constraintStart_toStartOf="@+id/tvExpression"
        app:layout_constraintEnd_toEndOf="@id/tvExpression"
        app:layout_constraintTop_toBottomOf="@+id/etExpression" />

    <TextView
        android:id="@+id/tvBracketStart"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/char_bracket_start"
        app:layout_constraintBottom_toBottomOf="@+id/etBorderA"
        app:layout_constraintStart_toStartOf="@id/tvBorders"
        app:layout_constraintTop_toBottomOf="@id/tvBorders" />

    <EditText
        android:id="@+id/etBorderA"
        style="@style/EditTextRegularOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:ems="10"
        android:hint="@string/char_two"
        android:inputType="number|numberDecimal|numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/tvSemicolonOne"
        app:layout_constraintStart_toEndOf="@id/tvBracketStart"
        app:layout_constraintTop_toBottomOf="@id/tvBorders" />

    <TextView
        android:id="@+id/tvSemicolonOne"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="-1dp"
        android:text="@string/char_semicolon"
        android:layout_marginStart="78dp"
        app:layout_constraintStart_toEndOf="@id/tvBracketStart"
        app:layout_constraintTop_toTopOf="@id/tvBracketStart"
        app:layout_constraintBottom_toBottomOf="@id/tvBracketStart"/>

    <EditText
        android:id="@+id/etBorderB"
        style="@style/EditTextRegularOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal|numberSigned"
        android:hint="@string/char_three"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/tvSemicolonOne"
        app:layout_constraintTop_toTopOf="@id/etBorderA"
        app:layout_constraintBottom_toBottomOf="@id/etBorderA"
        app:layout_constraintEnd_toStartOf="@id/tvBracketEnd"
        />

    <TextView
        android:id="@+id/tvBracketEnd"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/char_bracket_end"
        android:layout_marginStart="78dp"
        android:paddingBottom="2dp"
        app:layout_constraintTop_toTopOf="@id/tvBracketStart"
        app:layout_constraintBottom_toBottomOf="@id/tvBracketStart"
        app:layout_constraintStart_toEndOf="@id/tvSemicolonOne"
        />

    <TextView
        android:id="@+id/tvAccuracy"
        style="@style/TextRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_accuracy"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/tvBorders"
        app:layout_constraintEnd_toEndOf="@id/tvBorders"
        app:layout_constraintTop_toBottomOf="@id/etBorderA"
        />

    <EditText
        android:id="@+id/etAccuracy"
        style="@style/EditTextRegularOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:hint="@string/hint_float_value"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/etExpression"
        app:layout_constraintEnd_toEndOf="@id/etExpression"
        app:layout_constraintTop_toBottomOf="@id/tvAccuracy" />

    <Button
        android:id="@+id/bFindSolution"
        style="@style/ButtonMedium500"
        android:text="@string/find_solution"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etAccuracy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDividerFirst"
        style="@style/DividerLine"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/bFindSolution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDividerSecond"
        style="@style/DividerLine"
        app:layout_constraintTop_toBottomOf="@id/tvDividerFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDividerThird"
        style="@style/DividerLine"
        app:layout_constraintTop_toBottomOf="@id/tvDividerSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSolution"
        style="@style/TitleTopScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/title_solution_underlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDividerThird" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gHidenSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="hsvXend,hsvFXend, tvStep, bShowDetailedSolution" />

    <TextView
        android:id="@+id/tvStep"
        style="@style/TextRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tvAccuracy"
        app:layout_constraintStart_toStartOf="@+id/tvAccuracy"
        app:layout_constraintTop_toBottomOf="@id/tvSolution"
        app:layout_constraintBottom_toTopOf="@id/hsvXend"
        tools:text="Step: 9" />


    <HorizontalScrollView
        android:id="@+id/hsvXend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/tvStep"
        app:layout_constraintStart_toStartOf="@id/tvStep"
        app:layout_constraintTop_toBottomOf="@id/tvStep">

        <TextView
            android:id="@+id/tvXEnd"
            style="@style/TextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="x_end = 1.234567890123" />
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/hsvFXend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/tvStep"
        app:layout_constraintStart_toStartOf="@id/tvStep"
        app:layout_constraintTop_toBottomOf="@id/hsvXend">

        <TextView
            android:id="@+id/tvFEnd"
            style="@style/TextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="F(x_end) = 1.234567890123" />

    </HorizontalScrollView>

    <Button
        android:id="@+id/bShowDetailedSolution"
        style="@style/ButtonMedium500"
        android:layout_marginVertical="10dp"
        android:text="@string/title_detailed_solution"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bFindSolution"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/bFindSolution"
        app:layout_constraintTop_toBottomOf="@+id/hsvFXend"
        app:layout_constraintVertical_bias="0.236" />

</androidx.constraintlayout.widget.ConstraintLayout>