<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_help_splash"
    >

    <TextView
        android:id="@+id/tvnameHelp"
        style="@style/TitleTopScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_help_complex_op"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDividerHelp"
        style="@style/DividerLine"
        app:layout_constraintTop_toBottomOf="@id/tvnameHelp"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvHelpElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_element"
        android:fontFamily="@font/poppins_medium_500"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDividerHelp" />

    <TextView
        android:id="@+id/tvHelpDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium_500"
        android:text="@string/title_description"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHelpElement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/tvHelpElement"
        app:layout_constraintTop_toTopOf="@+id/tvHelpElement" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHelp"
        tools:listitem="@layout/card_rv_dialog_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHelpElement" />
</androidx.constraintlayout.widget.ConstraintLayout>